--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq python-rpm cpio python-enchant python-magic xz-utils bzip2 gzip
+ - sudo apt-get install -qq rpm python-rpm cpio python-enchant python-magic xz-utils bzip2 gzip
 script: py.test -v
