--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq rpm python-rpm cpio python-enchant python-magic xz-utils bzip2 gzip
-script: py.test -v
+ - sudo apt-get install -qq python-rpm cpio python-enchant python-magic xz-utils bzip2 gzip
+script:
+ - PYTHONPATH=/usr/lib/python2.7/dist-packages/ py.test -v
