--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-rpm cpio python-enchant python-magic xz-utils bzip2 gzip
 script:
- - PYTHONPATH=/usr/lib/python2.7/dist-packages/ py.test -v
+ - PYTHONPATH=/usr/lib/python2.7/dist-packages/ py.test -v -k 'not test_bunch_of_scl_source_rpms'
